revisão de domingo 1

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1119,7 +1119,12 @@ ferramentas
     url = {https://aws.amazon.com/pt/ecs/}
 }
 
-
+@misc{AWS,
+    author = {{AWS}},
+    company = {AWS},
+    year = {2020},
+    url = {https://aws.amazon.com/}
+}
 
 
 
@@ -1333,11 +1338,25 @@ isbn="978-3-662-44879-3"
     url = {https://cloud.google.com/appengine}
 }
 
+@misc{GCP,
+    author = {GCP},
+    company = {Google},
+    year = {2020},
+    url = {https://cloud.google.com/}
+}
+
 @misc{AzureCloudServices,
     author = {AzureCloudServices},
     company = {Microsoft},
     year = {2020},
     url = {https://azure.microsoft.com/en-us/services/cloud-services/}
+}
+
+@misc{Azure,
+    author = {Azure},
+    company = {Microsoft},
+    year = {2020},
+    url = {https://azure.microsoft.com/}
 }
 
 @article{yeboah2014factors,
