--- a/cap-introducao.tex
+++ b/cap-introducao.tex
@@ -41,7 +41,7 @@ Tais informações são disponibilizadas publicamente por meio do site \cite{Olh
 %A partir da coleta dos dados, pq como eles serão analisados?
 %em lote
  
-Os dados dos diferentes serviços de uma cidade podem ter um volume massivo, ser coletados em tempo real e ter uma grande variedade de informações, além de distintas representações dessas informações, de forma que são classificados como Big Data pela comunidade científica \citep{DBLP:journals/corr/WardB13a}.
+Os dados dos diferentes serviços de uma cidade podem ter um volume massivo, ser coletados em tempo real e ter uma grande variedade de informações, além de distintas representações dessas informações, de forma que são classificados como \textit{Big Data} pela comunidade científica \citep{DBLP:journals/corr/WardB13a}.
 %\todo[inline]{Por que a frase acima está no futuro do pretérito? Isso não faz sentido!}
 É possível realizar o processamento desses dados usando ferramentas que trabalham com dados de forma discreta, ou seja, que processam os dados em lotes após coletá-los e armazená-los. Esse tipo de abordagem de processamento já foi bastante estudado e documentado na literatura da área \citep{Dean:2010:MFD:1629175.1629198, DBLP:journals/corr/MoniruzzamanH13,computers3040117}.
 Mas em cenários nos quais o valor que a informação tem é dado em função do tempo,
@@ -55,7 +55,7 @@ Nesses casos, são necessárias ferramentas que processem os dados de toda a cid
 
 
 Uma das técnicas mais adequadas para detectar essas situações é o Processamento de Eventos Complexos (CEP – \textit{Complex Event Processing}), visto que ferramentas de CEP fornecem modos de declarar eventos que são definidos a partir da ocorrência de um padrão de chegada de dados. O CEP considera cada dado coletado como um evento e utiliza operadores sobre esses eventos, como filtros e detecção de padrões, para disparar a detecção de outros eventos \citep{Etzion:2010:EPA:1894960}.
-O CEP pode ser utilizado para modelar a detecção de situações de interesse a partir de quaisquer fluxo de dados contínuo. 
+O CEP pode ser utilizado para modelar a detecção de situações de interesse a partir de quaisquer fluxos de dados contínuos. 
 %Quando alguma situação específica ocorre, é possível detectar um evento de forma indireta, a partir de um padrão dos dados das medições coletadas.\todo[inline]{O parágrafo acima está repetitivo. A última frase, em particular, parece que já foi dita no início do parágrafo.}
 %\todo[inline]{No parágrafo acima, você exemplifica onde o CEP pode ser usado, mas não define o que é CEP. Além disso, está faltando a referência bibliográfica para o CEP. Na verdade, na sua introdução toda falta mais referências bibliográficas.}
 
@@ -70,7 +70,7 @@ Para a execução de sistemas de processamento em tempo real em cidades intelige
 
 
 
-Atualmente, a maioria da pesquisa em distribuição do processamento de eventos foca nos métodos de balanceamento dos tipos de eventos alocados a cada nó de processamento e as ferramentas de código aberto disponíveis não oferecem nativamente métodos de distribuição e auto-escalabilidade. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas para a distribuição do processamento de eventos se resumem a reunir o processamento de tipos de eventos com dependências similares ou separá-los com base no uso de recursos que cada processamento de tipo de evento usa. Além disto, uso de arquiteturas orquestradas, em que uma parte central executa todas as ações principais do sistema, foi escolhido por todos os trabalhos pesquisados. Esse estilo organizacional pode levar a um sistema no qual a ocorrência de uma falha no ponto central afeta todo o sistema~\citep{Newman:2015:BM:2904388}. 
+Atualmente, a maioria da pesquisa em distribuição do processamento de eventos foca nos métodos de balanceamento dos tipos de eventos alocados a cada nó de processamento e as ferramentas de código aberto disponíveis não oferecem nativamente métodos de distribuição e auto-escalabilidade. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas para a distribuição do processamento de eventos se resumem a reunir o processamento de tipos de eventos com dependências similares ou separá-los com base no uso de recursos que cada processamento de tipo de evento usa. Além disso, uso de arquiteturas orquestradas, em que uma parte central executa todas as ações principais do sistema, foi escolhido por todos os trabalhos pesquisados. Esse estilo organizacional pode levar a um sistema no qual a ocorrência de uma falha no ponto central afeta todo o sistema~\citep{Newman:2015:BM:2904388}. 
 
 
 
@@ -130,7 +130,7 @@ Atualmente, a maioria da pesquisa em distribuição do processamento de eventos 
 
 O objetivo principal deste trabalho é a criação de uma arquitetura de Processamento de Eventos Complexos para a execução nativa de nuvem, que implemente os requisitos necessários de sistemas nativos de nuvem: auto-escalabilidade, tolerância a falhas no ambiente de execução e uso de especificação de infraestrutura computacional como código~\citep{garrison2017cloud}. O sistema desenvolvido a partir da implementação desta arquitetura deve utilizar o mínimo de recursos computacionais e físicos para detecção de eventos em tempo real.
 
-Ao criar esta arquitetura distribuída, foi escolhido usar o padrão de microsserviços para o seu desenho. Microsserviços são descritos como serviços pequenos e autônomos que trabalham juntos para a execução de tarefas~\citep{Newman:2015:BM:2904388}. O uso de microsserviços facilita o desenvolvimento de uma arquitetura escalável, pois é possível criar mais instâncias do mesmo microsserviço que executa funções que estão em sobrecarga. Além disto, foi decidido usar o estilo de coreografia para o desenho da arquitetura, onde os microsserviços se coordenam para a realizam das funções do sistema. Isto resulta em um melhor funcionamento do sistema em caso de falhas pontuais, pois somente o microsserviço que encontrou a falha em execução é afetado.
+Ao criar esta arquitetura distribuída, foi escolhido usar o padrão de microsserviços para o seu desenho. Microsserviços são descritos como serviços pequenos e autônomos que trabalham juntos para a execução de tarefas~\citep{Newman:2015:BM:2904388}. O uso de microsserviços facilita o desenvolvimento de uma arquitetura escalável, pois é possível criar mais instâncias do mesmo microsserviço que executa funções que estão em sobrecarga. Além disto, foi decidido usar o estilo de coreografia para o desenho da arquitetura, onde os microsserviços se coordenam para a realização das funções do sistema. Isto resulta em um melhor funcionamento do sistema em caso de falhas pontuais, pois somente o microsserviço que encontrou a falha em execução é afetado.
 
 A partir da pesquisa realizada nos trabalhos relacionados de distribuição de processamento de eventos complexos, foram  criados dois algoritmos de balanceamento de carga entre os microsserviços que contem nós de processamento de eventos. Um destes algoritmos seleciona os tipos de eventos a serem realocados de acordo com o tempo necessário para reconstruir seu estado de detecção, enquanto o outro seleciona os tipos de eventos de acordo com a similaridade dos seus tipos de eventos de entrada, procurando agrupar o processamento de tipos de eventos com a mesma entrada no mesmo nó de processamento e consequentemente minimizando a transmissão de eventos entre nós de processamento de eventos.
 
@@ -168,7 +168,7 @@ As contribuições deste trabalho são as seguintes:
   
   %O sistema utiliza diferentes bibliotecas e ferramentas para ter suporte nativo de nuvem\todo{"suporte nativo de nuvem" não faz sentido. Reescrever o trecho}, as quais facilitam a instanciação em qualquer provedor de nuvem privada.
   
-  \item[3.] Desenho e execução de experimentos relacionados a cidades inteligentes, utilizando a simulação de dados reais do transporte público na cidade de São Paulo, para determinar o desempenho do sistema durante uma situação de sobrecarga, avaliado as seguintes métricas: capacidade de auto-escalabilidade, custo computacional de processamento, latência  durante período de sobrecarga do sistema, e vazão do sistema para a detecção de possíveis perdas de eventos.
+  \item[3.] Desenho e execução de experimentos relacionados a cidades inteligentes, utilizando a simulação de dados reais do transporte público na cidade de São Paulo, para determinar o desempenho do sistema durante uma situação de sobrecarga, avaliando as seguintes métricas: capacidade de auto-escalabilidade, custo computacional de processamento, latência  durante período de sobrecarga do sistema, e vazão do sistema para a detecção de possíveis perdas de eventos.
   
   \item[4.] Uma publicação sobre o presente trabalho em 2018 no \textit{The 1st Workshop on the Distributed Smart City (WDSC'2018)} durante a \textit{37th IEEE International Symposium on Reliable Distributed Systems}, entítulada : \textit{A Microservices Architecture for Distributed Complex Event Processing in Smart Cities} ~\citep{8615650}.
   
@@ -203,6 +203,6 @@ As contribuições deste trabalho são as seguintes:
 \label{sec:organizacao_trabalho}
 
 
-No Capítulo~\ref{cap:conceitos}, apresenta-se os principais conceitos relacionados a Processamento de Eventos Complexos, Arquitetura de Microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta artigos que estudam a escalabilidade em CEP a partir de diferentes técnicas, uso de CEP nativo de nuvem, e compara as conclusões sobre a pesquisa na área. No Capítulo \ref{cap:arquitetura}, apresenta-se com detalhes a arquitetura de microsserviços criada neste trabalho. O protótipo e as ferramentas utilizadas no sistema  são apresentados em \ref{cap:prototype} . O desenho do experimento utilizado para avaliar o sistema é apresentado em \ref{cap:experimento} e os resultados do experimento em si são apresentados em \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} faz uma reflexão sobre o resultado e sobre possíveis contribuições futuras.
+No Capítulo~\ref{cap:conceitos}, apresenta-se os principais conceitos relacionados a Processamento de Eventos Complexos, Arquitetura de Microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta artigos que estudam a escalabilidade em CEP a partir de diferentes técnicas, uso de CEP nativo de nuvem, e compara as conclusões sobre a pesquisa na área. No Capítulo \ref{cap:arquitetura}, apresenta-se com detalhes a arquitetura de microsserviços criada neste trabalho. O protótipo e as ferramentas utilizadas no sistema  são apresentados em \ref{cap:prototype} . O desenho do experimento utilizado para avaliar o sistema é apresentado no Capítulo \ref{cap:experimento} e os resultados do experimento em si são apresentados no Capítulo \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} faz uma reflexão sobre o resultado e sobre possíveis contribuições futuras.
 
 %As sequências testadas no trabalho estão disponíveis no Apêndice \ref{ape:sequencias}.
