--- a/cap-trabalhos.tex
+++ b/cap-trabalhos.tex
@@ -13,7 +13,7 @@ Neste capítulo são apresentados trabalhos relacionados as técnicas de distrib
 
 \section{Distribuição de Processamento de Eventos}
 
-Vários trabalhos se propuseram a pesquisar como melhorar a escalabilidade em CEP, estudando o balanceamento de carga do processamento de eventos. As contribuições deles se dividem em alguns em alguns tipos de distribuição de tipos de eventos adotadas, como a distribuição de acordo com a similaridade de suas dependências, distribuição da detecção de um único tipo de evento e distribuição dos tipos de evento baseada no uso de recursos computacionais. À seguir cada um destes tipos é apresentado e discutido.
+Vários trabalhos se propuseram a pesquisar como melhorar a escalabilidade em CEP, estudando o balanceamento de carga do processamento de eventos. As contribuições deles se dividem em alguns em alguns tipos de distribuição de tipos de eventos adotadas, como a distribuição de acordo com a similaridade de suas dependências, distribuição da detecção de um único tipo de evento e distribuição dos tipos de evento baseada no uso de recursos computacionais. A seguir cada um destes tipos é apresentado e discutido.
 
 
 
@@ -168,7 +168,7 @@ A arquitetura apresentada por \cite{6906776} usa uma abordagem para escalar a de
 %e tolerância a falhas\todo{Não entendi o que você quer dizer com o trecho a partir de ``não é uma opção de comparação justa...''. Rever a escrita.}. 
 
 
-A pesquisa em desenvolvimento de sistemas de CEP que escalam horizontalmente e são nativos de nuvem ainda foi pouco explorada. Os trabalhos apresentados que mencionam o uso de CEP em sistemas nativos de nuvem não propõe o desenvolvimento de sistemas que oferecem ao usuário a opção de definição de tipos de eventos utilizando os operadores de CEP. Atualmente, com o aumento do uso de computação em nuvem, esta deveria ser uma das considerações mais importantes no projeto de sistemas distribuídos, visto que a grande maioria dos sistemas que lidam com Big Data em tempo real estão migrando para nuvem. Sistemas que são construídos à partir do conhecimento de como a nuvem funciona e levando em conta as falhas e os métodos padronizados de recuperação automática, além da auto-escalabilidade, são reconhecidos como exemplos a serem seguidos, não só pela comunidade de sistemas nativos de nuvem, como por administradores e pesquisadores em geral.
+A pesquisa em desenvolvimento de sistemas de CEP que escalam horizontalmente e são nativos de nuvem ainda foi pouco explorada. Os trabalhos apresentados que mencionam o uso de CEP em sistemas nativos de nuvem não propõe o desenvolvimento de sistemas que oferecem ao usuário a opção de definição de tipos de eventos utilizando os operadores de CEP. Atualmente, com o aumento do uso de computação em nuvem, esta deveria ser uma das considerações mais importantes no projeto de sistemas distribuídos, visto que a grande maioria dos sistemas que lidam com Big Data em tempo real estão migrando para nuvem. Sistemas que são construídos a partir do conhecimento de como a nuvem funciona e levando em conta as falhas e os métodos padronizados de recuperação automática, além da auto-escalabilidade, são reconhecidos como exemplos a serem seguidos, não só pela comunidade de sistemas nativos de nuvem, como por administradores e pesquisadores em geral.
 Neste trabalho de mestrado, desenvolvemos uma arquitetura de CEP que leva em consideração estes requisitos para a distribuição de processamento de eventos.
 
 
